# anomx

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  release.sh
.github/workflows/: ci.yml
docs/: api.md  index.md
examples/: baseline_detection.py  naive_forecast.py
src/anomx/: __init__.py  __main__.py  _shared.py  cli.py
src/anomx/agent/: __init__.py  app.py  debug.py  memories.py  mode.py  model_catalog.py  platform_client.py  runtime.py  sandbox.py  state.py  store.py  terminal.py  tool_manager.py  ui.py
src/anomx/agent/agents/: __init__.py  build.py  explore.py  general.py  kinds.py  main.py  scout.py
src/anomx/agent/backends/: __init__.py  anthropic.py  base.py  blablador.py  desy_assistant.py  ollama.py  openai.py  openai_chat.py
src/anomx/agent/base/: __init__.py  agents.py  backends.py  exceptions.py  interactions.py  processes.py  subagents.py  tools.py
src/anomx/agent/exceptions/: __init__.py  tools.py
src/anomx/agent/helpers/: anomx_api.py  debug.py  extract_json.py  local_sandbox.py  mode.py  platform_client.py  sandbox.py  state.py  tool_manager.py  utils.py
src/anomx/agent/skills/: __init__.py  find-issues.md  make-report.md
src/anomx/agent/tools/: __init__.py  _time.py  ask_question.py  check_command_status.py  cli_command.py  commands.py  create_plan.py  end_process.py  filesystem.py  finish_anyways.py  get_subagent_info.py  glob.py  grep.py  interaction.py  kill_command.py  list_directory.py  memorize.py  output_response.py  plan_schema.py  planning.py  prompt_subagent.py  read_file.py  remove_plan.py  remove_subagent.py  send_feedback.py  start_process.py  start_subagent.py  subagents.py  update_plan.py  use_anomx_api.py  wait.py  web.py  web_fetch.py  web_search.py
src/anomx/agent/ui/: __init__.py  app.py  constants.py  models.py
src/anomx/components/: __init__.py  base.py  contracts.py  pipeline.py
src/anomx/components/algorithms/: __init__.py  base.py  contracts.py
src/anomx/components/base/: __init__.py  capabilities.py  classifiers.py  component.py  detectors.py  models.py  scorers.py  signature.py
src/anomx/components/detection/: __init__.py
src/anomx/components/models/: __init__.py  base.py  constant.py
src/anomx/data/: __init__.py  datasets.py  loaders.py  remote.py
src/anomx/data/base/: __init__.py  adapters.py  characteristics.py  observation_set.py  relations.py  views.py
src/anomx/datasets/: __init__.py
src/anomx/detectors/: __init__.py  base.py  statistical.py
src/anomx/integrations/: __init__.py  darts.py
src/anomx/models/: __init__.py  base.py  naive.py
src/anomx/runner/: __init__.py  context.py  execution.py  jobs.py  runner.py
src/anomx/scorers/: __init__.py  base.py  statistical.py
tests/: test_agent_cli.py  test_base.py  test_components.py  test_datasets.py  test_detectors.py  test_models.py  test_package.py
(+54 files in other folders)
