[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "anomx"
version = "0.2.14"
description = "Installable time-series anomaly library with forecasting, reconstruction, and representation base approaches."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Theo Rieken" }
]
keywords = [
  "anomaly-detection",
  "forecasting",
  "time-series",
  "machine-learning",
  "observability",
  "data-intelligence"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Typing :: Typed"
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3"
]

[project.optional-dependencies]
darts = [
  "u8darts[all]>=0.30"
]
dev = [
  "mypy>=1.10",
  "pandas-stubs>=2.2",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5"
]
release = [
  "build>=1.2",
  "docutils>=0.21.2,<0.22",
  "twine>=6.2,<7.0"
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5"
]
platform = [
  "fsspec>=2024.6",
  "pyarrow>=16.0",
  "redis>=5.0"
]

[project.urls]
Homepage = "https://www.anomx.io"
Repository = "https://github.com/theorieken/anomx"
Issues = "https://github.com/theorieken/anomx/issues"

[project.scripts]
anomx = "anomx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/anomx"]

[tool.hatch.build.targets.wheel.force-include]
"src/anomx/py.typed" = "anomx/py.typed"
"src/anomx/agent/skills/find-issues/README.md" = "anomx/agent/skills/find-issues/README.md"
"src/anomx/agent/skills/make-report/README.md" = "anomx/agent/skills/make-report/README.md"
"src/anomx/agent/skills/map-folder/README.md" = "anomx/agent/skills/map-folder/README.md"
"src/anomx/agent/skills/use-anomx-api/README.md" = "anomx/agent/skills/use-anomx-api/README.md"
"src/anomx/agent/skills/use-anomx-api/api.py" = "anomx/agent/skills/use-anomx-api/api.py"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "ANN"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]

[tool.mypy]
python_version = "3.11"
files = ["src/anomx"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.coverage.run]
branch = true
source = ["anomx"]

[tool.coverage.report]
show_missing = true
skip_covered = true
